# secret-santa

./: .bashrc  .dockerignore  .env  .env.example  Dockerfile  config.py  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  requirements.txt  restore-entrypoint.sh  static_data.py  static_messages.json
alembic/: env.py
alembic/versions/: f33b6601b19b_initial_tables.py
app/: main.py
app/bot/: application.py  bot.py  keyboards.py  validators.py
app/bot/conversations/: filters.py  handlers.py  services.py
app/bot/messages/: callbacks.py  filters.py  handlers.py  services.py
app/core/: config.py  logger.py  models.py  static_data.py
app/db/: models.py  services.py  session.py
bot/: application.py  bot.py  filters.py  keyboards.py  validators.py
bot/conversations/: callbacks.py  filters.py  handlers.py  services.py
bot/messages/: callbacks.py  filters.py  handlers.py  services.py
db/: models.py  services.py  session.py
docker/app/: Dockerfile
docker/db/: Dockerfile
utils/: models.py
